--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Kulim Park", sans-serif;
+  background-color: rgb(230, 250, 241);
+  overflow: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  height: 100vh;
+  width: 100vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cont {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  /* background-color: #; */
+}
+.mainTextInput {
+  width: 40vw;
+  height: 10vh;
+  font-size: 30px;
+  margin-right: 1rem;
+  background-color: #00ffa2;
+}
+button {
+  height: 10vh;
+  width: 10vw;
+  font-size: 40px;
+  background-color: #ffffff;
+  color: #00ffa2;
+  font-weight: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.notes {
+  width: 100%;
+  height: 100%;
+}
+.note {
+  width: 70%;
+  border: 1px solid black;
+  padding: 5px;
+  margin: 10px auto;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.noteBtn {
+  display: flex;
+  cursor: pointer;
+}
+.material-icons:hover {
+  color: green;
+}
+.noteText {
+  border: none;
+}
+.noteText:not(input[readonly]) {
+  color: red;
 }
